--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:umd": "rollup -c config/rollup.config.umd.js",
     "build": "npm run clean && npm run build:self && npm run build:esm &&  npm run build:umd",
     "test": "npm run lint && mocha -R spec --compilers js:babel-register",
-    "release": "npm run test && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags"
+    "release": "npm run test && git commit -am $npm_package_version && git tag $npm_package_version && git push origin master && git push --tags"
   },
   "author": "zcorky",
   "license": "MIT",
