--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:umd": "rollup -c config/rollup.config.umd.js",
     "build": "npm run clean && npm run build:self && npm run build:esm &&  npm run build:umd",
     "test": "npm run lint && mocha -R spec --compilers js:babel-register",
-    "release": "npm run test && git commit -am $npm_package_version && git tag $npm_package_version && git push origin master && git push --tags"
+    "release": "npm run test && git commit -am $npm_package_version && git tag $npm_package_version && git push origin master && git push --tags",
+    "deploy": "npm run build && cp -rf lib example && gh-pages -d example"
   },
   "author": "zcorky",
   "license": "MIT",
@@ -34,6 +35,7 @@
     "es5-shim": "4.5.10",
     "eslint": "4.18.2",
     "expect.js": "0.3.1",
+    "gh-pages": "^2.0.1",
     "mocha": "3.5.3",
     "rollup": "0.57.1",
     "rollup-plugin-babel": "3.0.3",
