:sparkles:(CI): update travis-ci for tasks: deploy gh-pages & npm

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,26 @@
 language: node_js
 node_js:
-  - "9"
+  - "10"
   - "8"
+
+jobs:
+  includes:
+    - stage: deploy
+      script:
+        - echo "build for deploy"
+        - npm run build
+      deploy:
+        # deploy to gh-pages
+        # Need env
+        #   GITHUB_TOKEN
+        - provider: script
+          skip_cleanup: true
+          script: bash scripts/deploy.sh
+          on:
+            tags: true
+        # deploy to npm === npm publish
+        - provider: npm
+          skip_cleanup: true
+          api_key: $NPM_AUTH_TOKEN
+          on:
+            tags: true
