--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ jobs:
         - git config --global user.email 'tobewhatwewant@gmail.com'
         - git clone --branch gh-pages https://github.com/${TRAVIS_REPO_SLUG} gh-pages
       script:
+        - echo "current repo: ${TRAVIS_REPO_SLUG} tag: ${TRAVIS_TAG}"
         - echo "build for deploy gh-pages"
         - npm run build
       deploy:
@@ -30,6 +31,7 @@ jobs:
       deploy:
         # deploy to npm === npm publish
         - provider: npm
+          email: tobewhatwewant@gmail.com
           skip_cleanup: true
           api_key: $NPM_AUTH_TOKEN
           on:
