--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "rollup-plugin-uglify": "^3.0.0"
   },
   "dependencies": {
+    "@zcorky/dom": "^0.0.2",
     "babel-runtime": "6.26.0"
   },
   "files": [
