chore: use "npm run dev" for develop

--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "clean": "rm -rf ./lib",
     "lint": "eslint src",
     "copy": "cp -rf lib example",
+    "start": "npm run dev",
+    "dev": "concurrently \"npm run watch\" \"npm run serve\" \"npm run open\"",
+    "serve": "cd example && cliz-serve",
+    "watch": "rollup -c config/rollup.config.umd.js -o ./example/lib/index.umd.js -w",
+    "open": "open-cli http://localhost:9000",
     "build:self": "rollup -c config/rollup.config.js",
     "build:esm": "rollup -c config/rollup.config.esm.js",
     "build:umd": "rollup -c config/rollup.config.umd.js",
@@ -27,17 +32,21 @@
     "url": "https://github.com/zcorky/movable/issues"
   },
   "devDependencies": {
+    "@cliz/hotreload": "^0.1.6",
+    "@cliz/serve": "^0.1.2",
     "babel-core": "6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.6.1",
     "chai": "^4.1.2",
+    "concurrently": "^5.3.0",
     "es5-shim": "4.5.10",
     "eslint": "4.18.2",
     "expect.js": "0.3.1",
     "gh-pages": "^2.0.1",
     "mocha": "3.5.3",
+    "open-cli": "^6.0.1",
     "rollup": "0.57.1",
     "rollup-plugin-babel": "3.0.3",
     "rollup-plugin-commonjs": "8.3.0",
